--- a/last/css/style.css
+++ b/last/css/style.css
@@ -58,7 +58,7 @@ a{
 	width:100%;
 	padding-top: 80px;
 	height: 750px;
-	background-image: url("C:/Users/さやか/Desktop/卒業制作/img/680928_m_wi/2f3b6ee764d792a29229cf0c37421f4c_m.jpg")
+	background-image:url("img/680928_m_wi/top.jpg")
 	}
 
 .container{
@@ -74,7 +74,7 @@ a{
 
 .section-title{
 	height:150px;
-	background-image: url("C:/Users/さやか/Desktop/卒業制作/img/34abc9fc2dee044f85054b15c2153a08_m.jpg");
+	background-image: url("img/34abc9fc2dee044f85054b15c2153a08_m.jpg");
 	background-size: cover;
 	opacity: 0.5;
 }
